--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=moteteapp
 
-spring.datasource.url=jdbc:postgresql://${DB_HOST}/cliente_app
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/cliente_app?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -10,3 +10,11 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.format-sql = true
+
+server.address=0.0.0.0
+server.port=8080
+
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
