--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=moteteapp
 
-spring.datasource.url=jdbc:postgresql://${DB_HOST}/cliente_app?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/cliente_app
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
-spring.jpa.hibernate.ddl-auto=update   
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.format-sql = true
